# Soft-Sub

./: .gitattributes  .prettierrc.json  README.md  gitignore  gitignore.txt  package-lock.json  package.json  tsconfig.json  vitest.config.js
.github/workflows/: ci.yml  release.yml
scripts/: copy-whisper.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: pipeline_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: integration_fixtures.rs  integration_pipeline.rs
src-tauri/tests/fixtures/: README.md  sample.srt  sample_words.json
src/css/: main.css
src/js/: logger.js  pipeline.js  srt-utils.js  srt-utils.test.js  tauri.js  theme.js  translation-languages.js
tests/fixtures/expected/: sample.srt
tools/: generate.py  make_srt.py  requirements-translate.txt  translate_srt.py
tools/tests/: compare.py  test_make_srt.py  test_pipeline.sh  test_translate_srt.py
