[package]
name = "softsub_tauri"
version = "0.1.0"
authors = ["You"]
edition = "2021"

[lib]
name = "softsub_tauri"
path = "src/lib.rs"

[[bin]]
name = "softsub_tauri"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["default", "tray-icon", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2" 
urlencoding = "2.1.3"
tokio          = { version = "1", features = ["process", "rt"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "pipeline_bench"
harness = false 


